--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span class='name'></span>
             <span class="area"></span>
         </div>
-        <span class='btn-remove'>x<i class='fa fa-times'></i></span>
+        <span class='btn-remove'><i class='fa fa-times'></i></span>
     </div>
 
     <div class="graphic template">
