--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
 
             <div class="form">
-                <form action="">
+                <form>
                     <input type="text" list="countries" placeholder="Search a country">
                     <button type="submit" class="btn">Add</button>
                     <span class="msg"></span>
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="totalArea" id="totalArea">
-                    <h2>Total area : <span class="value"></span></h2>
+                    <h2></h2>
                     <div class="block">
                     </div>
                     <div class="percent">
@@ -89,7 +89,7 @@
     <script src="js/script.js" type="module"></script>
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/5b8f00096f.js" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+
 </body>
 
 </html>
