Population page Added

--- a/population.html
+++ b/population.html
@@ -21,13 +21,13 @@
         <span class='btn-remove'><i class='fa fa-times'></i></span>
     </div>
 
-    <input type="hidden" id="compare" value="area">
+    <input type="hidden" id="compare" value="population">
 
     <header class="header">
         <div class="container">
             <div class="title">
                 <h1>Compare Countries</h1>
-                <h2>Compare Area (km²)</h2>
+                <h2>Compare Population</h2>
             </div>
             <div class="anuncio"></div>
         </div>
@@ -111,7 +111,7 @@
             <div class="links">
                 <h3>Others</h3>
                 <div class="row">
-                    <a href="./population.html">compare population</a>
+                    <a href="./index.html">compare population</a>
                 </div>
             </div>
 
