--- a/population.html
+++ b/population.html
@@ -40,6 +40,9 @@
     <meta name="twitter:image" content="https://www.comparecountries.com/og-image.png">
     <meta name="twitter:creator" content="@marcosambrosio">
 
+    <!-- Script do google adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8673964630413887"
+        crossorigin="anonymous"></script>
 
     <title>Compare Countries</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
