--- a/population.html
+++ b/population.html
@@ -122,7 +122,7 @@
 
             </section>
 
-            <div class="anuncio w100">
+            <div class="anuncio">
                 <script async
                     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8673964630413887"
                     crossorigin="anonymous"></script>
@@ -166,7 +166,7 @@
                 </div>
             </section>
 
-            <div class="anuncio w100">
+            <div class="anuncio">
                 <script async
                     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8673964630413887"
                     crossorigin="anonymous"></script>
