--- a/population.html
+++ b/population.html
@@ -52,7 +52,7 @@
 
 <body>
 
-    <input type="hidden" id="compare" value="area">
+    <input type="hidden" id="compare" value="population">
 
     <div class="point template">
         <span class='color'></span>
@@ -111,6 +111,11 @@
                     <h2 class="selected"></h2>
                     <ul class="list"></ul>
                     <p class="all"></p>
+                </div>
+
+                <div class="comparation" id="comparation"></div>
+                    <h2></h2>
+                    <div class="block"></div>
                 </div>
 
                 <div class="total" id="total">
