--- a/population.html
+++ b/population.html
@@ -113,7 +113,7 @@
                     <p class="all"></p>
                 </div>
 
-                <div class="comparation" id="comparation"></div>
+                <div class="comparation" id="comparation">
                     <h2></h2>
                     <div class="block"></div>
                 </div>
