without border color

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         crossorigin="anonymous"></script>
 
     <title>Compare Countries</title>
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/all.css"> -->
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/all.css"> -->
 </head>
 
 <body>
@@ -160,9 +160,8 @@
                 <ul>
                     <li>Use the form to Search a countries</li>
                     <li>Click twice to disable a block</li>
-                    <li>click in <i class="fa fa-times"></i> to delete a country</li>
+                    <li>Click in <i class="fa fa-times"></i> to delete a country</li>
                     <li>Click in circle the change the color</li>
-
                 </ul>
             </section>
 
@@ -194,7 +193,7 @@
         </div>
     </footer>
 
-    <script src="js/script.js" type="module"></script>
+    <script src="./js/script.js" type="module"></script>
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/5b8f00096f.js" crossorigin="anonymous"></script>
