--- a/population.html
+++ b/population.html
@@ -158,9 +158,8 @@
                 <ul>
                     <li>Use the form to Search a countries</li>
                     <li>Click twice to disable a block</li>
-                    <li>click in <i class="fa fa-times"></i> to delete a country</li>
+                    <li>Click in <i class="fa fa-times"></i> to delete a country</li>
                     <li>Click in circle the change the color</li>
-
                 </ul>
             </section>
 
