changed canonical value tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Marcos Ambrósio" />
     <meta name="keywords" content="country , compare , coutries , area , population" />
     <meta name="robots" content="index , nofolllow" />
-    <link rel="canonical" href="https://www.comparecountries.onrender.com/">
+    <link rel="canonical" href="https://www.comparecountries.vercel.app/">
     <meta name="theme-color" content="#f9fafb" />
     <meta name="copyright" content="MACode ID, https://macodeid.com/" />
 
@@ -18,7 +18,6 @@
  GDP and more. Get detailed insights and make informed comparisons.">
     <meta itemprop="image" content="https://exemplo.com/imagem.png">
     <link rel="stylesheet" href="https://plus.google.com/+SuaPagina" rel="publisher">
-
 
     <!-- Open Graph ( Para as redes sociais ) -->
     <!-- Open Graph Facebook  -->
