--- a/population.html
+++ b/population.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Marcos Ambrósio" />
     <meta name="keywords" content="country , compare , coutries , area , population" />
     <meta name="robots" content="noindex , nofolllow" />
-    <link rel="canonical" href="https://www.comparecountries.onrender.com/">
+    <link rel="canonical" href="https://www.comparecountries.vercel.app/">
     <meta name="theme-color" content="#f9fafb" />
     <meta name="copyright" content="MACode ID, https://macodeid.com/" />
 
